--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  overflow: hidden;
+  
+}
+:root {
+  --vh: 100%;
+}
+
+body {
+  height: calc(var(--vh, 1vh) * 100);
+}
+
 .App {
   text-align: center;
 }
@@ -12,9 +28,17 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+body{
+  background-color: #bdfee8;
+}
+nav{
+  box-shadow: 0px 5px 2px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1)
+}
+.logout_btn{
+  box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 0.3), 0px 14px 15px -3px rgba(0, 0, 0, 0.1);
+}
 .App-header {
-  background-color: #282c34;
+  background-color: #bdfee8;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +46,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+select{
+  outline: none;
+  border: 1px solid black;
 }
 
 .App-link {
@@ -35,4 +63,37 @@
   to {
     transform: rotate(360deg);
   }
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+.button{
+  background-color: #02a102;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+  
+}
+.button:hover{
+  background-color: #08c063;
+  transition: ease 0.3s;
+}
+.input{
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 16px;
+  width: 100%;
+  color: black;
+  margin-bottom: 10px;
+}
+
+#map{
+  height: 200px;
+}
+
+@import url('https://unpkg.com/leaflet/dist/leaflet.css');
+.leaflet-control-attribution {
+  display: none;
 }
